--- a/custom.css
+++ b/custom.css
@@ -65,6 +65,26 @@
 }
 
 
+#caseidlink a{
+   color: #212529 !important;
+    background-color: #f8f9fa;
+    padding: .25em .4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+#caseidlink a:hover{
+color: #212529!important;
+    background-color: #f8f9fa;
+}
+
+
  
 
 #caseidlink a:hover{
