--- a/custom.css
+++ b/custom.css
@@ -75,17 +75,10 @@
     text-align: center;
     white-space: nowrap;
     vertical-align: baseline;
+    horizontal-align:middle;
     border-radius: .25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-#caseidlink a:hover{
-color: #212529!important;
-    background-color: #f8f9fa;
-}
-
-
- 
+} 
 
 #caseidlink a:hover{
 color: #212529!important;
