--- a/custom.css
+++ b/custom.css
@@ -72,7 +72,9 @@
    color: #212529 !important;
     background-color: #f8f9fa;
     padding: .25em .4em;
-	 
+	 padding: .25em .4em;
+	margin-left:5%;
+	margin-right:-3%;
     font-size: 75%;
     font-weight: 700;
     line-height: 1;
@@ -88,7 +90,8 @@
    color: #212529 !important;
     background-color: #f8f9fa;
     padding: .25em .4em;
-	 
+	margin-left:8%;
+	margin-right:-6%;
 	 
     font-size: 75%;
     font-weight: 700;
