--- a/custom.css
+++ b/custom.css
@@ -89,7 +89,8 @@
    color: #212529 !important;
     background-color: #f8f9fa;
     padding: .25em .4em;
-	 
+	 margin-left:13%;
+	margin-right:-8%;
     font-size: 75%;
     font-weight: 700;
     line-height: 1;
