--- a/custom.css
+++ b/custom.css
@@ -73,7 +73,8 @@
     background-color: #f8f9fa;
     padding: .25em .4em;
 	 padding: .25em .4em;
-	 
+	 	margin-left:5%;
+	margin-right:-3%;
     font-size: 75%;
     font-weight: 700;
     line-height: 1;
