--- a/custom.css
+++ b/custom.css
@@ -20,10 +20,8 @@
     
 .white_color_link a {
         color: #fff !important;
-        text-decoration: none;
-        margin-left: 5px;
-        padding-left: 3px;
-        padding-right: 3px;
+        text-decoration: underline;
+        
     }
     
     table, th, td {
