--- a/custom.css
+++ b/custom.css
@@ -81,5 +81,16 @@
   text-decoration: none;
 }
 
+body {
+	background-color: #3498db;
+	color: #ecf0f1;
+}
+
+.back-to-top {
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    display: none;
+}
  
 	
